tests/neg-custom-args/erased/i4058.scala
sealed erased class E // error
